# sturdy-broccoli

./: .gitignore  IMPLEMENTATION_PLAN.md  NOTICE  README.md  SEED_MANIFEST.md  _bootstrap.py  bootstrap  certi-easy  conftest.py  package_import_smoke.py  pitch  pyproject.toml  pyrightconfig.json
CERTI/: .gitignore  CMakeLists.txt
CERTI/test/: CMakeLists.txt
CERTI/test/testFederate/: CMakeLists.txt  ownershipProbe-IEEE1516_2010.cc  rtia_verbose_wrapper.sh  run_ownership_probe.sh
CERTI/test/utility/: T2010.xml  T2010Small.xml  T2010VerySmallO.xml  T2010VerySmallOI.xml
INBOX/: README.md
analysis/: package_graph.json
artifacts/: README.md
cpp_shims/: build_standard_shim.py
docs/: README 2.md  README.md  agent_runbook.md  architecture.md  backend_capability_matrix.md  backend_compliance_discovery.md  backend_conformance_matrix.md  backend_decision_tree.md  backend_route_inventory.md  backend_route_inventory_baselines.md  backend_route_inventory_commands.md  backend_route_inventory_remote.md  backend_route_inventory_routes.md  backend_transport_fom_selection_guide.md  callback_model_guide.md  certi_negotiated_ownership_findings.md  certi_runtime_limitations.md  certi_section8_runbook.md  certi_spec_traceability.md  codex_runner_authorization.md  cpp_toolchain.md  create_federate_and_fom.md  development_next_steps.md  documentation_hierarchy 2.md  documentation_hierarchy.md  extending_ambassador_transports.md  federate_cli_change_map.md  federation_orchestration.md  first_run.md  fom_reading_map.md  fom_siso_family_map.md  fom_siso_pitch_micro_parity.md  fom_siso_quirks.md  fom_siso_runtime_showcase.md  fom_siso_showcase.md  fom_tooling_front_door.md  fom_validate.md  fom_workbench.md  hla_x_rosetta_release.md  import_boundary_rules.md  (+65 more)
examples/: backend_recording.py  fom_time_factories.py  java_shim_federate.py  jpype_java_rti.py  jpype_java_rti_2025.py  minimal_federate.py  minimal_fom_demo.py  py4j_java_rti.py  py4j_java_rti_2025.py  python_route_federate.py  python_rti_2010_minimal.py  python_rti_2025_minimal.py  rti_factory_selection.py  target_radar.py  target_radar_simulation.py
hla2010/: __init__.py  ambassadors.py  api.py  conformance.py  encoding.py  enums.py  exceptions.py  fom.py  handles.py  java_runtime.py  mom.py  mom_catalog.py  plugin_api.py  raw_api.py  real_rti.py  real_rti_certi.py  real_rti_pitch.py  real_rti_portico.py  real_rti_process.py  requirements_packet.py  rti.py  runtime_api.py  service_reporting.py  spec_api.py  spec_refs.py  spec_sources.py  startup.py  time.py  time_management.py  types.py  verification.py
java_shims/: README.md
requirements/: README.md  active_service_rows.csv  catalogs  family_seed_rows.csv  history  hla1516_1_api_detailed_reconciliation.csv  hla1516_1_clause_10_sup_detailed_reconciliation.csv  hla1516_1_clause_11_mom_detailed_reconciliation.csv  hla1516_1_clause_4_fm_service_decomposition.csv  hla1516_1_clause_5_declaration_management.csv  hla1516_1_clause_5_dm_detailed_reconciliation.csv  hla1516_1_clause_6_object_management.csv  hla1516_1_clause_6_om_detailed_reconciliation.csv  hla1516_1_clause_7_own_detailed_reconciliation.csv  hla1516_1_clause_8_tm_detailed_reconciliation.csv  hla1516_1_clause_9_ddm_detailed_reconciliation.csv  hla1516_1_conf_detailed_reconciliation.csv  hla1516_1_ddm_detailed_reconciliation.csv  hla1516_1_dm_detailed_reconciliation.csv  hla1516_1_federate_interface.csv  hla1516_1_fm_detailed_reconciliation.csv  hla1516_1_mom_detailed_reconciliation.csv  hla1516_1_om_detailed_reconciliation.csv  hla1516_1_own_detailed_reconciliation.csv  hla1516_1_priority_clauses_4_8_11.csv  hla1516_1_priority_clauses_7_9_10.csv  hla1516_1_sup_detailed_reconciliation.csv  hla1516_1_tm_detailed_reconciliation.csv  hla1516_2_omt.csv  hla1516_2_omt_detailed_reconciliation.csv  hla1516_2_omt_xml_detailed_reconciliation.csv  hla1516_2_priority_omt.csv  hla1516_clause_12_save_restore.csv  hla1516_framework_detailed_reconciliation.csv  hla1516_framework_rules.csv  hla1516_xml_detailed_reconciliation.csv  hla_1516_master_harmonization_index_v1_0.csv  hla_1516_packet_hookup_status_v1_0.csv  latest  requirement_id_registry.yaml  (+3 more)
scripts/: README.md  _bootstrap.py  accept_pitch_dialog.sh  bootstrap_all.sh  bootstrap_profile.sh  bootstrap_python.sh  certi_easy.sh  check_certi_preflight.py  check_certi_preflight.sh  check_pitch_preflight.py  check_pitch_preflight.sh  check_python_route_preflight.py  check_upstream_contract.py  check_vendor_runner_template_drift.py  classify_vendor_runtime.py  detect_workspace_duplicates.py  diagnose_pitch_exchange.py  diagnose_pitch_negotiated_ownership.py  discover_backend_compliance.py  doctor.py  download_siso_datafiles.py  export_upstream_contract.py  fetch_public_fom_baseline.py  generate_api_metadata.py  generate_clause13_conformance_packet.py  generate_compliance_artifacts.py  generate_federate_service_contract.py  generate_fom_corpus_classification.py  generate_fom_inventory_view.py  generate_fom_overview.py  generate_fom_roundtrip.py  generate_fom_schema_audit.py  generate_fom_schema_baseline.py  generate_fom_siso_audit.py  generate_fom_siso_showcase.py  generate_fom_stress.py  generate_fom_validation.py  generate_fom_workbench_snapshot.py  generate_hla_interface_contracts.py  generate_imported_packet_backlog.py  (+70 more)
specs/: hla2010_api.json
src/: README.md
testing/: test_focus_manifest.json  test_surface_manifest.json
tests/: README.md  __init__.py  compliance_helpers.py  compliance_row_models.py  conftest.py  doc_test_helpers.py  docs_policy_helpers.py  pitch_clause4_policy_helpers.py  pitch_matrix_policy_helpers.py  reconciliation_truth_sources.py  requirement_label_helpers.py  requirement_marker_groups.py  test_backend_compliance_discovery_policy.py  test_backend_wrapper_policy.py  test_bootstrap_doctor.py  test_certi_backend_callbacks.py  test_certi_backend_transport.py  test_certi_matrix_policy.py  (+93 more)
(+1564 files in other folders)
